# python-goof

./: README.md
pip-sample/: requirements.txt
poetry-sample/: pyproject.toml
